--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="">
 </head>
 <body>
-    <script src='./build/eslint.js'></script>
+    <script src='./build/eslint.bundle.js'></script>
 </body>
 </html>
